Apply remaining project updates
